# printf2

./: CMakeLists.txt  Makefile  a.out  author  digits_precision.c  digits_precision_spec.c  exceptions_func.c  flags.c  ft_atoi.c  ft_bzero.c  ft_itoa.c  ft_memset.c  ft_pick_f_bigs.c  ft_printf  ft_printf.h  ft_printf.h.gch  ft_strchr.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strlen.c  ft_strnew.c  homework  int.c  libft.h.gch  main.c  path.c  pick_f_base.c  pick_f_bigs.c  pick_f_c.c  pick_f_d.c  pick_f_lu.c  pick_f_p.c  pick_f_percent.c  pick_f_s.c  pick_f_u_int.c  pick_f_w.c  precision.c  results  string.c  (+5 more)
libft/srcs/: ft_memset.c
